--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link href="styles/style.css" rel="stylesheet" />
-    <title>アベレージラリー用計算サイト</title>
+    <title>アベレージラリー用計算機</title>
   </head>
   <body>
     <div id="function_1">
@@ -57,4 +57,5 @@
     </div>
   </body>
   <script src="scripts/main.js"></script>
+
 </html>
