--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link href="styles/style.css" rel="stylesheet" />
-    <title>アベレージラリー用計算機</title>
+    <title>アベレージラリー用計算機
+    </title>
   </head>
   <body>
     <div id="function_1">
@@ -22,7 +23,7 @@
         </div>
         <div>
           <label for="input_time3">レスコンカードの時間:</label>
-          <input id="input_time3" class="inputs" type="number" name="time3" min="0" step="1" placeholder="mmss">
+          <input id="input_time3" class="inputs" type="number" name="time3" min="0" step="1" enterkeyhint="done" placeholder="hhmmss">
         </div>
       </div>
       <p>
@@ -57,5 +58,4 @@
     </div>
   </body>
   <script src="scripts/main.js"></script>
-
 </html>
