--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div>
           <label for="input_time3">レスコンカードの時間:</label>
-          <input id="input_time3" class="inputs" type="number" name="time3" min="0" step="1" enterkeyhint="done" placeholder="hhmmss">
+          <input id="input_time3" class="inputs" type="number" name="time3" min="0" step="1" enterkeyhint="go" placeholder="hhmmss">
         </div>
       </div>
       <p>
@@ -59,3 +59,4 @@
   </body>
   <script src="scripts/main.js"></script>
 </html>
+
