--- a/index.html
+++ b/index.html
@@ -38,18 +38,20 @@
       <p>ある距離を異なる速度で走ったときの時間差を計算</p>
       <div>
         入力
-        <div>
-          <label for="input_distance">距離:</label>
-          <input id="input_distance" class="inputs" type="number" name="distance" min="0" step="0.001" placeholder="[km]">
-        </div>
-        <div>
-          <label for="input_speed1">速度１:</label>
-          <input id="input_speed1" class="inputs" type="number" name="speed1" min="0" step="1" placeholder="[km/h]">
-        </div>
-        <div>
-          <label for="input_speed2">速度２:</label>
-          <input id="input_speed2" class="inputs" type="number" name="speed2" min="0" step="1" placeholder="[km/h]">
-        </div>
+        <form>
+          <div>
+            <label for="input_distance">距離:</label>
+            <input id="input_distance" class="inputs" type="number" name="distance" min="0" step="0.001" placeholder="[km]">
+          </div>
+          <div>
+            <label for="input_speed1">速度１:</label>
+            <input id="input_speed1" class="inputs" type="number" name="speed1" min="0" step="1" placeholder="[km/h]">
+          </div>
+          <div>
+            <label for="input_speed2">速度２:</label>
+            <input id="input_speed2" class="inputs" type="number" name="speed2" min="0" step="1" placeholder="[km/h]">
+          </div>
+        </form>
       </div>
       <p>
         出力<br>
